# pdf_deskew

./: IMPROVEMENTS.md  PUBLISH.md  README.md  README_zh.md  RELEASE_NOTES.md  pyproject.toml
src/: deskew_pdf.py
src/deskew_tool/: __init__.py  deskew_pdf.py
src/pdf_deskew_ui/: __init__.py  main.py  ui.py  worker.py
tests/: test_deskew.py
