[project]
name = "deskew"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "driezy", email = "luoyido@outlook.com"},
]
dependencies = [
    "PyMuPDF>=1.24.13",
    "opencv-python>=4.10.0.84",
    "Pillow>=11.0.0",
    "deskew>=1.5.1",
    "tqdm>=4.66.6",
    "numpy>=2.1.2",
    "qt-material>=2.14",
    "pip>=24.3.1",
    "pyqt6>=6.7.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
