[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pdf-deskew"
version = "0.1.0"
description = "A GUI tool for deskewing scanned PDF documents"
authors = [
    {name = "driezy", email = "luoyido@outlook.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "PyMuPDF>=1.24.13",
    "opencv-python>=4.10.0.84",
    "Pillow>=11.0.0",
    "deskew>=1.5.1",
    "tqdm>=4.66.6",
    "numpy>=2.1.2",
    "qt-material>=2.14",
    "pyqt6>=6.7.1",
]

[project.gui-scripts]
pdf-deskew = "pdf_deskew_ui.main:main"

[project.scripts]
pdf-deskew-cli = "deskew_tool:main"

[tool.pdm]
distribution = false

[tool.pdm.build]
package-dir = "src"
includes = ["src/deskew_tool", "src/pdf_deskew_ui"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]
